Fixed creating list from stream API